molalib/src/front/y.output
   0  $accept : program $end

   1  program : program import_stmt
   2          | program export_stmt
   3          | program global_variable_stmt
   4          | program function_stmt
   5          | program type_stmt
   6          | program method_stmt
   7          | program constructor_stmt
   8          | program destructor_stmt
   9          | program stmt
  10          |

  11  import_stmt : IMPORT MODULE_PATH AS IDENTIFIER

  12  export_stmt : EXPORT export_item_list

  13  export_item_list : export_item_list ',' export_item
  14                   | export_item

  15  export_item : expr AS IDENTIFIER

  16  global_variable_stmt : GLOBAL IDENTIFIER

  17  function_stmt : FUNCTION IDENTIFIER '(' parameter_list ')' block_stmt
  18                | FUNCTION IDENTIFIER '(' ')' block_stmt

  19  parameter_list : parameter_list ',' parameter_item
  20                 | parameter_item

  21  parameter_item : COPY IDENTIFIER
  22                 | REF IDENTIFIER
  23                 | PASS IDENTIFIER

  24  type_stmt : TYPE IDENTIFIER '{' PUBLIC member_list PRIVATE member_list '}'
  25            | TYPE IDENTIFIER '{' PUBLIC PRIVATE member_list '}'
  26            | TYPE IDENTIFIER '{' PUBLIC member_list PRIVATE '}'

  27  member_list : member_list ',' member_item
  28              | member_item

  29  member_item : IDENTIFIER "()"
  30              | IDENTIFIER

  31  method_stmt : METHOD IDENTIFIER '(' parameter_list ')' OF IDENTIFIER block_stmt

  32  constructor_stmt : CONSTRUCTOR '(' parameter_list ')' OF IDENTIFIER block_stmt

  33  destructor_stmt : DESTRUCTOR OF IDENTIFIER block_stmt

  34  stmt : expr
  35       | block_stmt
  36       | while_stmt
  37       | for_stmt
  38       | if_stmt
  39       | continue_stmt
  40       | break_stmt
  41       | return_stmt
  42       | assignment_stmt
  43       | try_catch_stmt
  44       | signal_stmt
  45       | var_stmt
  46       | stmt ';'

  47  block_stmt : '{' stmt_list '}'
  48             | '{' '}'

  49  stmt_list : stmt_list stmt
  50            | stmt

  51  while_stmt : WHILE expr stmt

  52  for_stmt : FOR expr ';' expr ';' expr stmt
  53           | FOR ';' expr ';' expr stmt
  54           | FOR expr ';' ';' expr stmt
  55           | FOR expr ';' expr ';' stmt
  56           | FOR ';' ';' expr stmt
  57           | FOR ';' expr ';' stmt
  58           | FOR expr ';' ';' stmt
  59           | FOR ';' ';' stmt

  60  if_stmt : IF expr stmt ELSE stmt
  61          | IF expr stmt

  62  continue_stmt : CONTINUE

  63  break_stmt : BREAK

  64  return_stmt : RETURN COPY expr
  65              | RETURN REF expr
  66              | RETURN PASS expr

  67  assignment_stmt : expr COPIES expr
  68                  | expr REFS expr

  69  try_catch_stmt : TRY block_stmt catch_item_list CATCH '*' AS IDENTIFIER block_stmt
  70                 | TRY block_stmt CATCH '*' AS IDENTIFIER block_stmt
  71                 | TRY block_stmt catch_item_list

  72  catch_item_list : catch_item ',' catch_item_list
  73                  | catch_item

  74  catch_item : CATCH expr AS IDENTIFIER block_stmt

  75  signal_stmt : SIGNAL expr BECAUSE expr

  76  var_stmt : VAR IDENTIFIER '=' expr

  77  expr : assignment

  78  assignment : inline_if '=' assignment
  79             | inline_if

  80  inline_if : WHEN new THEN new ELSE new
  81            | new

  82  new : NEW expr '(' expr_list ')'
  83      | NEW expr
  84      | logical_or

  85  logical_or : logical_or OR logical_and
  86             | logical_and

  87  logical_and : logical_and AND bitwise_or
  88              | bitwise_or

  89  bitwise_or : bitwise_or '|' bitwise_xor
  90             | bitwise_xor

  91  bitwise_xor : bitwise_xor '^' bitwise_and
  92              | bitwise_and

  93  bitwise_and : bitwise_and '&' equality
  94              | equality

  95  equality : equality EQ relational
  96           | equality NE relational
  97           | relational

  98  relational : relational LE sum
  99             | relational GE sum
 100             | relational '<' sum
 101             | relational '>' sum
 102             | sum

 103  sum : sum '+' bitwise_shift
 104      | sum '-' bitwise_shift
 105      | bitwise_shift

 106  bitwise_shift : bitwise_shift LSHIFT term
 107                | bitwise_shift RSHIFT term
 108                | term

 109  term : term '*' prefix_op
 110       | term '/' prefix_op
 111       | term '%' prefix_op
 112       | prefix_op

 113  prefix_op : '+' prefix_op
 114            | '-' prefix_op
 115            | NOT prefix_op
 116            | '~' prefix_op
 117            | primary

 118  primary : primary '(' expr_list ')'
 119          | primary '(' ')'
 120          | primary '[' expr ']'
 121          | primary '.' IDENTIFIER
 122          | primary ':' IDENTIFIER
 123          | elementary

 124  elementary : '(' expr ')'
 125             | literal

 126  literal : NULLV
 127          | BOOL
 128          | CHAR
 129          | INT
 130          | FLOAT
 131          | STRING
 132          | IDENTIFIER

 133  expr_list : expr_list ',' expr
 134            | expr

state 0
	$accept : . program $end  (0)
	program : .  (10)

	.  reduce 10

	program  goto 1


state 1
	$accept : program . $end  (0)
	program : program . import_stmt  (1)
	program : program . export_stmt  (2)
	program : program . global_variable_stmt  (3)
	program : program . function_stmt  (4)
	program : program . type_stmt  (5)
	program : program . method_stmt  (6)
	program : program . constructor_stmt  (7)
	program : program . destructor_stmt  (8)
	program : program . stmt  (9)

	$end  accept
	BOOL  shift 2
	CHAR  shift 3
	INT  shift 4
	FLOAT  shift 5
	STRING  shift 6
	IDENTIFIER  shift 7
	NULLV  shift 8
	IMPORT  shift 9
	EXPORT  shift 10
	GLOBAL  shift 11
	FUNCTION  shift 12
	TYPE  shift 13
	METHOD  shift 14
	CONSTRUCTOR  shift 15
	DESTRUCTOR  shift 16
	CONTINUE  shift 17
	BREAK  shift 18
	RETURN  shift 19
	VAR  shift 20
	TRY  shift 21
	SIGNAL  shift 22
	IF  shift 23
	WHILE  shift 24
	FOR  shift 25
	WHEN  shift 26
	NEW  shift 27
	NOT  shift 28
	'{'  shift 29
	'+'  shift 30
	'-'  shift 31
	'~'  shift 32
	'('  shift 33
	.  error

	import_stmt  goto 34
	export_stmt  goto 35
	global_variable_stmt  goto 36
	function_stmt  goto 37
	type_stmt  goto 38
	method_stmt  goto 39
	constructor_stmt  goto 40
	destructor_stmt  goto 41
	stmt  goto 42
	block_stmt  goto 43
	while_stmt  goto 44
	for_stmt  goto 45
	if_stmt  goto 46
	continue_stmt  goto 47
	break_stmt  goto 48
	return_stmt  goto 49
	assignment_stmt  goto 50
	try_catch_stmt  goto 51
	signal_stmt  goto 52
	var_stmt  goto 53
	expr  goto 54
	assignment  goto 55
	inline_if  goto 56
	new  goto 57
	logical_or  goto 58
	logical_and  goto 59
	bitwise_or  goto 60
	bitwise_xor  goto 61
	bitwise_and  goto 62
	equality  goto 63
	relational  goto 64
	sum  goto 65
	bitwise_shift  goto 66
	term  goto 67
	prefix_op  goto 68
	primary  goto 69
	elementary  goto 70
	literal  goto 71


state 2
	literal : BOOL .  (127)

	.  reduce 127


state 3
	literal : CHAR .  (128)

	.  reduce 128


state 4
	literal : INT .  (129)

	.  reduce 129


state 5
	literal : FLOAT .  (130)

	.  reduce 130


state 6
	literal : STRING .  (131)

	.  reduce 131


state 7
	literal : IDENTIFIER .  (132)

	.  reduce 132


state 8
	literal : NULLV .  (126)

	.  reduce 126


state 9
	import_stmt : IMPORT . MODULE_PATH AS IDENTIFIER  (11)

	MODULE_PATH  shift 72
	.  error


state 10
	export_stmt : EXPORT . export_item_list  (12)

	BOOL  shift 2
	CHAR  shift 3
	INT  shift 4
	FLOAT  shift 5
	STRING  shift 6
	IDENTIFIER  shift 7
	NULLV  shift 8
	WHEN  shift 26
	NEW  shift 27
	NOT  shift 28
	'+'  shift 30
	'-'  shift 31
	'~'  shift 32
	'('  shift 33
	.  error

	export_item_list  goto 73
	export_item  goto 74
	expr  goto 75
	assignment  goto 55
	inline_if  goto 56
	new  goto 57
	logical_or  goto 58
	logical_and  goto 59
	bitwise_or  goto 60
	bitwise_xor  goto 61
	bitwise_and  goto 62
	equality  goto 63
	relational  goto 64
	sum  goto 65
	bitwise_shift  goto 66
	term  goto 67
	prefix_op  goto 68
	primary  goto 69
	elementary  goto 70
	literal  goto 71


state 11
	global_variable_stmt : GLOBAL . IDENTIFIER  (16)

	IDENTIFIER  shift 76
	.  error


state 12
	function_stmt : FUNCTION . IDENTIFIER '(' parameter_list ')' block_stmt  (17)
	function_stmt : FUNCTION . IDENTIFIER '(' ')' block_stmt  (18)

	IDENTIFIER  shift 77
	.  error


state 13
	type_stmt : TYPE . IDENTIFIER '{' PUBLIC member_list PRIVATE member_list '}'  (24)
	type_stmt : TYPE . IDENTIFIER '{' PUBLIC PRIVATE member_list '}'  (25)
	type_stmt : TYPE . IDENTIFIER '{' PUBLIC member_list PRIVATE '}'  (26)

	IDENTIFIER  shift 78
	.  error


state 14
	method_stmt : METHOD . IDENTIFIER '(' parameter_list ')' OF IDENTIFIER block_stmt  (31)

	IDENTIFIER  shift 79
	.  error


state 15
	constructor_stmt : CONSTRUCTOR . '(' parameter_list ')' OF IDENTIFIER block_stmt  (32)

	'('  shift 80
	.  error


state 16
	destructor_stmt : DESTRUCTOR . OF IDENTIFIER block_stmt  (33)

	OF  shift 81
	.  error


state 17
	continue_stmt : CONTINUE .  (62)

	.  reduce 62


state 18
	break_stmt : BREAK .  (63)

	.  reduce 63


state 19
	return_stmt : RETURN . COPY expr  (64)
	return_stmt : RETURN . REF expr  (65)
	return_stmt : RETURN . PASS expr  (66)

	COPY  shift 82
	REF  shift 83
	PASS  shift 84
	.  error


state 20
	var_stmt : VAR . IDENTIFIER '=' expr  (76)

	IDENTIFIER  shift 85
	.  error


state 21
	try_catch_stmt : TRY . block_stmt catch_item_list CATCH '*' AS IDENTIFIER block_stmt  (69)
	try_catch_stmt : TRY . block_stmt CATCH '*' AS IDENTIFIER block_stmt  (70)
	try_catch_stmt : TRY . block_stmt catch_item_list  (71)

	'{'  shift 29
	.  error

	block_stmt  goto 86


state 22
	signal_stmt : SIGNAL . expr BECAUSE expr  (75)

	BOOL  shift 2
	CHAR  shift 3
	INT  shift 4
	FLOAT  shift 5
	STRING  shift 6
	IDENTIFIER  shift 7
	NULLV  shift 8
	WHEN  shift 26
	NEW  shift 27
	NOT  shift 28
	'+'  shift 30
	'-'  shift 31
	'~'  shift 32
	'('  shift 33
	.  error

	expr  goto 87
	assignment  goto 55
	inline_if  goto 56
	new  goto 57
	logical_or  goto 58
	logical_and  goto 59
	bitwise_or  goto 60
	bitwise_xor  goto 61
	bitwise_and  goto 62
	equality  goto 63
	relational  goto 64
	sum  goto 65
	bitwise_shift  goto 66
	term  goto 67
	prefix_op  goto 68
	primary  goto 69
	elementary  goto 70
	literal  goto 71


state 23
	if_stmt : IF . expr stmt ELSE stmt  (60)
	if_stmt : IF . expr stmt  (61)

	BOOL  shift 2
	CHAR  shift 3
	INT  shift 4
	FLOAT  shift 5
	STRING  shift 6
	IDENTIFIER  shift 7
	NULLV  shift 8
	WHEN  shift 26
	NEW  shift 27
	NOT  shift 28
	'+'  shift 30
	'-'  shift 31
	'~'  shift 32
	'('  shift 33
	.  error

	expr  goto 88
	assignment  goto 55
	inline_if  goto 56
	new  goto 57
	logical_or  goto 58
	logical_and  goto 59
	bitwise_or  goto 60
	bitwise_xor  goto 61
	bitwise_and  goto 62
	equality  goto 63
	relational  goto 64
	sum  goto 65
	bitwise_shift  goto 66
	term  goto 67
	prefix_op  goto 68
	primary  goto 69
	elementary  goto 70
	literal  goto 71


state 24
	while_stmt : WHILE . expr stmt  (51)

	BOOL  shift 2
	CHAR  shift 3
	INT  shift 4
	FLOAT  shift 5
	STRING  shift 6
	IDENTIFIER  shift 7
	NULLV  shift 8
	WHEN  shift 26
	NEW  shift 27
	NOT  shift 28
	'+'  shift 30
	'-'  shift 31
	'~'  shift 32
	'('  shift 33
	.  error

	expr  goto 89
	assignment  goto 55
	inline_if  goto 56
	new  goto 57
	logical_or  goto 58
	logical_and  goto 59
	bitwise_or  goto 60
	bitwise_xor  goto 61
	bitwise_and  goto 62
	equality  goto 63
	relational  goto 64
	sum  goto 65
	bitwise_shift  goto 66
	term  goto 67
	prefix_op  goto 68
	primary  goto 69
	elementary  goto 70
	literal  goto 71


state 25
	for_stmt : FOR . expr ';' expr ';' expr stmt  (52)
	for_stmt : FOR . ';' expr ';' expr stmt  (53)
	for_stmt : FOR . expr ';' ';' expr stmt  (54)
	for_stmt : FOR . expr ';' expr ';' stmt  (55)
	for_stmt : FOR . ';' ';' expr stmt  (56)
	for_stmt : FOR . ';' expr ';' stmt  (57)
	for_stmt : FOR . expr ';' ';' stmt  (58)
	for_stmt : FOR . ';' ';' stmt  (59)

	BOOL  shift 2
	CHAR  shift 3
	INT  shift 4
	FLOAT  shift 5
	STRING  shift 6
	IDENTIFIER  shift 7
	NULLV  shift 8
	WHEN  shift 26
	NEW  shift 27
	NOT  shift 28
	'+'  shift 30
	'-'  shift 31
	'~'  shift 32
	'('  shift 33
	';'  shift 90
	.  error

	expr  goto 91
	assignment  goto 55
	inline_if  goto 56
	new  goto 57
	logical_or  goto 58
	logical_and  goto 59
	bitwise_or  goto 60
	bitwise_xor  goto 61
	bitwise_and  goto 62
	equality  goto 63
	relational  goto 64
	sum  goto 65
	bitwise_shift  goto 66
	term  goto 67
	prefix_op  goto 68
	primary  goto 69
	elementary  goto 70
	literal  goto 71


state 26
	inline_if : WHEN . new THEN new ELSE new  (80)

	BOOL  shift 2
	CHAR  shift 3
	INT  shift 4
	FLOAT  shift 5
	STRING  shift 6
	IDENTIFIER  shift 7
	NULLV  shift 8
	NEW  shift 27
	NOT  shift 28
	'+'  shift 30
	'-'  shift 31
	'~'  shift 32
	'('  shift 33
	.  error

	new  goto 92
	logical_or  goto 58
	logical_and  goto 59
	bitwise_or  goto 60
	bitwise_xor  goto 61
	bitwise_and  goto 62
	equality  goto 63
	relational  goto 64
	sum  goto 65
	bitwise_shift  goto 66
	term  goto 67
	prefix_op  goto 68
	primary  goto 69
	elementary  goto 70
	literal  goto 71


state 27
	new : NEW . expr '(' expr_list ')'  (82)
	new : NEW . expr  (83)

	BOOL  shift 2
	CHAR  shift 3
	INT  shift 4
	FLOAT  shift 5
	STRING  shift 6
	IDENTIFIER  shift 7
	NULLV  shift 8
	WHEN  shift 26
	NEW  shift 27
	NOT  shift 28
	'+'  shift 30
	'-'  shift 31
	'~'  shift 32
	'('  shift 33
	.  error

	expr  goto 93
	assignment  goto 55
	inline_if  goto 56
	new  goto 57
	logical_or  goto 58
	logical_and  goto 59
	bitwise_or  goto 60
	bitwise_xor  goto 61
	bitwise_and  goto 62
	equality  goto 63
	relational  goto 64
	sum  goto 65
	bitwise_shift  goto 66
	term  goto 67
	prefix_op  goto 68
	primary  goto 69
	elementary  goto 70
	literal  goto 71


state 28
	prefix_op : NOT . prefix_op  (115)

	BOOL  shift 2
	CHAR  shift 3
	INT  shift 4
	FLOAT  shift 5
	STRING  shift 6
	IDENTIFIER  shift 7
	NULLV  shift 8
	NOT  shift 28
	'+'  shift 30
	'-'  shift 31
	'~'  shift 32
	'('  shift 33
	.  error

	prefix_op  goto 94
	primary  goto 69
	elementary  goto 70
	literal  goto 71


state 29
	block_stmt : '{' . stmt_list '}'  (47)
	block_stmt : '{' . '}'  (48)

	BOOL  shift 2
	CHAR  shift 3
	INT  shift 4
	FLOAT  shift 5
	STRING  shift 6
	IDENTIFIER  shift 7
	NULLV  shift 8
	CONTINUE  shift 17
	BREAK  shift 18
	RETURN  shift 19
	VAR  shift 20
	TRY  shift 21
	SIGNAL  shift 22
	IF  shift 23
	WHILE  shift 24
	FOR  shift 25
	WHEN  shift 26
	NEW  shift 27
	NOT  shift 28
	'{'  shift 29
	'}'  shift 95
	'+'  shift 30
	'-'  shift 31
	'~'  shift 32
	'('  shift 33
	.  error

	stmt  goto 96
	block_stmt  goto 43
	stmt_list  goto 97
	while_stmt  goto 44
	for_stmt  goto 45
	if_stmt  goto 46
	continue_stmt  goto 47
	break_stmt  goto 48
	return_stmt  goto 49
	assignment_stmt  goto 50
	try_catch_stmt  goto 51
	signal_stmt  goto 52
	var_stmt  goto 53
	expr  goto 54
	assignment  goto 55
	inline_if  goto 56
	new  goto 57
	logical_or  goto 58
	logical_and  goto 59
	bitwise_or  goto 60
	bitwise_xor  goto 61
	bitwise_and  goto 62
	equality  goto 63
	relational  goto 64
	sum  goto 65
	bitwise_shift  goto 66
	term  goto 67
	prefix_op  goto 68
	primary  goto 69
	elementary  goto 70
	literal  goto 71


state 30
	prefix_op : '+' . prefix_op  (113)

	BOOL  shift 2
	CHAR  shift 3
	INT  shift 4
	FLOAT  shift 5
	STRING  shift 6
	IDENTIFIER  shift 7
	NULLV  shift 8
	NOT  shift 28
	'+'  shift 30
	'-'  shift 31
	'~'  shift 32
	'('  shift 33
	.  error

	prefix_op  goto 98
	primary  goto 69
	elementary  goto 70
	literal  goto 71


state 31
	prefix_op : '-' . prefix_op  (114)

	BOOL  shift 2
	CHAR  shift 3
	INT  shift 4
	FLOAT  shift 5
	STRING  shift 6
	IDENTIFIER  shift 7
	NULLV  shift 8
	NOT  shift 28
	'+'  shift 30
	'-'  shift 31
	'~'  shift 32
	'('  shift 33
	.  error

	prefix_op  goto 99
	primary  goto 69
	elementary  goto 70
	literal  goto 71


state 32
	prefix_op : '~' . prefix_op  (116)

	BOOL  shift 2
	CHAR  shift 3
	INT  shift 4
	FLOAT  shift 5
	STRING  shift 6
	IDENTIFIER  shift 7
	NULLV  shift 8
	NOT  shift 28
	'+'  shift 30
	'-'  shift 31
	'~'  shift 32
	'('  shift 33
	.  error

	prefix_op  goto 100
	primary  goto 69
	elementary  goto 70
	literal  goto 71


state 33
	elementary : '(' . expr ')'  (124)

	BOOL  shift 2
	CHAR  shift 3
	INT  shift 4
	FLOAT  shift 5
	STRING  shift 6
	IDENTIFIER  shift 7
	NULLV  shift 8
	WHEN  shift 26
	NEW  shift 27
	NOT  shift 28
	'+'  shift 30
	'-'  shift 31
	'~'  shift 32
	'('  shift 33
	.  error

	expr  goto 101
	assignment  goto 55
	inline_if  goto 56
	new  goto 57
	logical_or  goto 58
	logical_and  goto 59
	bitwise_or  goto 60
	bitwise_xor  goto 61
	bitwise_and  goto 62
	equality  goto 63
	relational  goto 64
	sum  goto 65
	bitwise_shift  goto 66
	term  goto 67
	prefix_op  goto 68
	primary  goto 69
	elementary  goto 70
	literal  goto 71


state 34
	program : program import_stmt .  (1)

	.  reduce 1


state 35
	program : program export_stmt .  (2)

	.  reduce 2


state 36
	program : program global_variable_stmt .  (3)

	.  reduce 3


state 37
	program : program function_stmt .  (4)

	.  reduce 4


state 38
	program : program type_stmt .  (5)

	.  reduce 5


state 39
	program : program method_stmt .  (6)

	.  reduce 6


state 40
	program : program constructor_stmt .  (7)

	.  reduce 7


state 41
	program : program destructor_stmt .  (8)

	.  reduce 8


state 42
	program : program stmt .  (9)
	stmt : stmt . ';'  (46)

	';'  shift 102
	$end  reduce 9
	BOOL  reduce 9
	CHAR  reduce 9
	INT  reduce 9
	FLOAT  reduce 9
	STRING  reduce 9
	IDENTIFIER  reduce 9
	NULLV  reduce 9
	IMPORT  reduce 9
	EXPORT  reduce 9
	GLOBAL  reduce 9
	FUNCTION  reduce 9
	TYPE  reduce 9
	METHOD  reduce 9
	CONSTRUCTOR  reduce 9
	DESTRUCTOR  reduce 9
	CONTINUE  reduce 9
	BREAK  reduce 9
	RETURN  reduce 9
	VAR  reduce 9
	TRY  reduce 9
	SIGNAL  reduce 9
	IF  reduce 9
	WHILE  reduce 9
	FOR  reduce 9
	WHEN  reduce 9
	NEW  reduce 9
	NOT  reduce 9
	'{'  reduce 9
	'+'  reduce 9
	'-'  reduce 9
	'~'  reduce 9
	'('  reduce 9


state 43
	stmt : block_stmt .  (35)

	.  reduce 35


state 44
	stmt : while_stmt .  (36)

	.  reduce 36


state 45
	stmt : for_stmt .  (37)

	.  reduce 37


state 46
	stmt : if_stmt .  (38)

	.  reduce 38


state 47
	stmt : continue_stmt .  (39)

	.  reduce 39


state 48
	stmt : break_stmt .  (40)

	.  reduce 40


state 49
	stmt : return_stmt .  (41)

	.  reduce 41


state 50
	stmt : assignment_stmt .  (42)

	.  reduce 42


state 51
	stmt : try_catch_stmt .  (43)

	.  reduce 43


state 52
	stmt : signal_stmt .  (44)

	.  reduce 44


state 53
	stmt : var_stmt .  (45)

	.  reduce 45


state 54
	stmt : expr .  (34)
	assignment_stmt : expr . COPIES expr  (67)
	assignment_stmt : expr . REFS expr  (68)

	COPIES  shift 103
	REFS  shift 104
	$end  reduce 34
	BOOL  reduce 34
	CHAR  reduce 34
	INT  reduce 34
	FLOAT  reduce 34
	STRING  reduce 34
	IDENTIFIER  reduce 34
	NULLV  reduce 34
	IMPORT  reduce 34
	EXPORT  reduce 34
	GLOBAL  reduce 34
	FUNCTION  reduce 34
	TYPE  reduce 34
	METHOD  reduce 34
	CONSTRUCTOR  reduce 34
	DESTRUCTOR  reduce 34
	CONTINUE  reduce 34
	BREAK  reduce 34
	RETURN  reduce 34
	VAR  reduce 34
	TRY  reduce 34
	SIGNAL  reduce 34
	IF  reduce 34
	ELSE  reduce 34
	WHILE  reduce 34
	FOR  reduce 34
	WHEN  reduce 34
	NEW  reduce 34
	NOT  reduce 34
	'{'  reduce 34
	'}'  reduce 34
	'+'  reduce 34
	'-'  reduce 34
	'~'  reduce 34
	'('  reduce 34
	';'  reduce 34


state 55
	expr : assignment .  (77)

	.  reduce 77


56: shift/reduce conflict (shift 105, reduce 79) on '='
state 56
	assignment : inline_if . '=' assignment  (78)
	assignment : inline_if .  (79)

	'='  shift 105
	$end  reduce 79
	BOOL  reduce 79
	CHAR  reduce 79
	INT  reduce 79
	FLOAT  reduce 79
	STRING  reduce 79
	IDENTIFIER  reduce 79
	NULLV  reduce 79
	IMPORT  reduce 79
	EXPORT  reduce 79
	GLOBAL  reduce 79
	FUNCTION  reduce 79
	TYPE  reduce 79
	METHOD  reduce 79
	CONSTRUCTOR  reduce 79
	DESTRUCTOR  reduce 79
	CONTINUE  reduce 79
	BREAK  reduce 79
	RETURN  reduce 79
	VAR  reduce 79
	TRY  reduce 79
	SIGNAL  reduce 79
	BECAUSE  reduce 79
	IF  reduce 79
	ELSE  reduce 79
	WHILE  reduce 79
	FOR  reduce 79
	WHEN  reduce 79
	THEN  reduce 79
	NEW  reduce 79
	NOT  reduce 79
	COPIES  reduce 79
	REFS  reduce 79
	AS  reduce 79
	'{'  reduce 79
	'}'  reduce 79
	'+'  reduce 79
	'-'  reduce 79
	'~'  reduce 79
	'('  reduce 79
	')'  reduce 79
	','  reduce 79
	';'  reduce 79
	']'  reduce 79


state 57
	inline_if : new .  (81)

	.  reduce 81


state 58
	new : logical_or .  (84)
	logical_or : logical_or . OR logical_and  (85)

	OR  shift 106
	$end  reduce 84
	BOOL  reduce 84
	CHAR  reduce 84
	INT  reduce 84
	FLOAT  reduce 84
	STRING  reduce 84
	IDENTIFIER  reduce 84
	NULLV  reduce 84
	IMPORT  reduce 84
	EXPORT  reduce 84
	GLOBAL  reduce 84
	FUNCTION  reduce 84
	TYPE  reduce 84
	METHOD  reduce 84
	CONSTRUCTOR  reduce 84
	DESTRUCTOR  reduce 84
	CONTINUE  reduce 84
	BREAK  reduce 84
	RETURN  reduce 84
	VAR  reduce 84
	TRY  reduce 84
	SIGNAL  reduce 84
	BECAUSE  reduce 84
	IF  reduce 84
	ELSE  reduce 84
	WHILE  reduce 84
	FOR  reduce 84
	WHEN  reduce 84
	THEN  reduce 84
	NEW  reduce 84
	NOT  reduce 84
	COPIES  reduce 84
	REFS  reduce 84
	AS  reduce 84
	'{'  reduce 84
	'}'  reduce 84
	'+'  reduce 84
	'-'  reduce 84
	'~'  reduce 84
	'('  reduce 84
	')'  reduce 84
	','  reduce 84
	';'  reduce 84
	'='  reduce 84
	']'  reduce 84


state 59
	logical_or : logical_and .  (86)
	logical_and : logical_and . AND bitwise_or  (87)

	AND  shift 107
	$end  reduce 86
	BOOL  reduce 86
	CHAR  reduce 86
	INT  reduce 86
	FLOAT  reduce 86
	STRING  reduce 86
	IDENTIFIER  reduce 86
	NULLV  reduce 86
	IMPORT  reduce 86
	EXPORT  reduce 86
	GLOBAL  reduce 86
	FUNCTION  reduce 86
	TYPE  reduce 86
	METHOD  reduce 86
	CONSTRUCTOR  reduce 86
	DESTRUCTOR  reduce 86
	CONTINUE  reduce 86
	BREAK  reduce 86
	RETURN  reduce 86
	VAR  reduce 86
	TRY  reduce 86
	SIGNAL  reduce 86
	BECAUSE  reduce 86
	IF  reduce 86
	ELSE  reduce 86
	WHILE  reduce 86
	FOR  reduce 86
	WHEN  reduce 86
	THEN  reduce 86
	NEW  reduce 86
	OR  reduce 86
	NOT  reduce 86
	COPIES  reduce 86
	REFS  reduce 86
	AS  reduce 86
	'{'  reduce 86
	'}'  reduce 86
	'+'  reduce 86
	'-'  reduce 86
	'~'  reduce 86
	'('  reduce 86
	')'  reduce 86
	','  reduce 86
	';'  reduce 86
	'='  reduce 86
	']'  reduce 86


state 60
	logical_and : bitwise_or .  (88)
	bitwise_or : bitwise_or . '|' bitwise_xor  (89)

	'|'  shift 108
	$end  reduce 88
	BOOL  reduce 88
	CHAR  reduce 88
	INT  reduce 88
	FLOAT  reduce 88
	STRING  reduce 88
	IDENTIFIER  reduce 88
	NULLV  reduce 88
	IMPORT  reduce 88
	EXPORT  reduce 88
	GLOBAL  reduce 88
	FUNCTION  reduce 88
	TYPE  reduce 88
	METHOD  reduce 88
	CONSTRUCTOR  reduce 88
	DESTRUCTOR  reduce 88
	CONTINUE  reduce 88
	BREAK  reduce 88
	RETURN  reduce 88
	VAR  reduce 88
	TRY  reduce 88
	SIGNAL  reduce 88
	BECAUSE  reduce 88
	IF  reduce 88
	ELSE  reduce 88
	WHILE  reduce 88
	FOR  reduce 88
	WHEN  reduce 88
	THEN  reduce 88
	NEW  reduce 88
	OR  reduce 88
	AND  reduce 88
	NOT  reduce 88
	COPIES  reduce 88
	REFS  reduce 88
	AS  reduce 88
	'{'  reduce 88
	'}'  reduce 88
	'+'  reduce 88
	'-'  reduce 88
	'~'  reduce 88
	'('  reduce 88
	')'  reduce 88
	','  reduce 88
	';'  reduce 88
	'='  reduce 88
	']'  reduce 88


state 61
	bitwise_or : bitwise_xor .  (90)
	bitwise_xor : bitwise_xor . '^' bitwise_and  (91)

	'^'  shift 109
	$end  reduce 90
	BOOL  reduce 90
	CHAR  reduce 90
	INT  reduce 90
	FLOAT  reduce 90
	STRING  reduce 90
	IDENTIFIER  reduce 90
	NULLV  reduce 90
	IMPORT  reduce 90
	EXPORT  reduce 90
	GLOBAL  reduce 90
	FUNCTION  reduce 90
	TYPE  reduce 90
	METHOD  reduce 90
	CONSTRUCTOR  reduce 90
	DESTRUCTOR  reduce 90
	CONTINUE  reduce 90
	BREAK  reduce 90
	RETURN  reduce 90
	VAR  reduce 90
	TRY  reduce 90
	SIGNAL  reduce 90
	BECAUSE  reduce 90
	IF  reduce 90
	ELSE  reduce 90
	WHILE  reduce 90
	FOR  reduce 90
	WHEN  reduce 90
	THEN  reduce 90
	NEW  reduce 90
	OR  reduce 90
	AND  reduce 90
	NOT  reduce 90
	COPIES  reduce 90
	REFS  reduce 90
	AS  reduce 90
	'{'  reduce 90
	'}'  reduce 90
	'+'  reduce 90
	'-'  reduce 90
	'~'  reduce 90
	'('  reduce 90
	')'  reduce 90
	','  reduce 90
	';'  reduce 90
	'='  reduce 90
	'|'  reduce 90
	']'  reduce 90


state 62
	bitwise_xor : bitwise_and .  (92)
	bitwise_and : bitwise_and . '&' equality  (93)

	'&'  shift 110
	$end  reduce 92
	BOOL  reduce 92
	CHAR  reduce 92
	INT  reduce 92
	FLOAT  reduce 92
	STRING  reduce 92
	IDENTIFIER  reduce 92
	NULLV  reduce 92
	IMPORT  reduce 92
	EXPORT  reduce 92
	GLOBAL  reduce 92
	FUNCTION  reduce 92
	TYPE  reduce 92
	METHOD  reduce 92
	CONSTRUCTOR  reduce 92
	DESTRUCTOR  reduce 92
	CONTINUE  reduce 92
	BREAK  reduce 92
	RETURN  reduce 92
	VAR  reduce 92
	TRY  reduce 92
	SIGNAL  reduce 92
	BECAUSE  reduce 92
	IF  reduce 92
	ELSE  reduce 92
	WHILE  reduce 92
	FOR  reduce 92
	WHEN  reduce 92
	THEN  reduce 92
	NEW  reduce 92
	OR  reduce 92
	AND  reduce 92
	NOT  reduce 92
	COPIES  reduce 92
	REFS  reduce 92
	AS  reduce 92
	'{'  reduce 92
	'}'  reduce 92
	'+'  reduce 92
	'-'  reduce 92
	'~'  reduce 92
	'('  reduce 92
	')'  reduce 92
	','  reduce 92
	';'  reduce 92
	'='  reduce 92
	'|'  reduce 92
	'^'  reduce 92
	']'  reduce 92

